--- a/package.json
+++ b/package.json
@@ -11,32 +11,43 @@
 		"cf-typegen": "wrangler types"
 	},
 	"dependencies": {
-		"@cloudflare/vite-plugin": "^1.13.8",
+		"@cloudflare/ai-chat": "^0.1.2",
+		"@cloudflare/kumo": "^1.5.1",
+		"@cloudflare/vite-plugin": "^1.25.1",
+		"@phosphor-icons/react": "^2.1.10",
 		"@tailwindcss/vite": "^4.1.18",
-		"@tanstack/react-devtools": "^0.7.0",
-		"@tanstack/react-router": "^1.132.0",
-		"@tanstack/react-router-devtools": "^1.132.0",
-		"@tanstack/react-router-ssr-query": "^1.131.7",
-		"@tanstack/react-start": "^1.132.0",
-		"@tanstack/router-plugin": "^1.132.0",
+		"@tanstack/react-devtools": "^0.7.11",
+		"@tanstack/react-query": "^5.90.21",
+		"@tanstack/react-query-devtools": "^5.91.3",
+		"@tanstack/react-router": "^1.161.1",
+		"@tanstack/react-router-devtools": "^1.161.1",
+		"@tanstack/react-router-ssr-query": "^1.161.1",
+		"@tanstack/react-start": "^1.161.1",
+		"@tanstack/router-plugin": "^1.161.1",
+		"agents": "^0.5.0",
+		"ai": "^6.0.90",
 		"lucide-react": "^0.545.0",
-		"react": "^19.2.0",
-		"react-dom": "^19.2.0",
+		"next-themes": "^0.4.6",
+		"react": "^19.2.4",
+		"react-dom": "^19.2.4",
+		"streamdown": "^2.2.0",
 		"tailwindcss": "^4.1.18",
-		"vite-tsconfig-paths": "^5.1.4"
+		"vite-tsconfig-paths": "^5.1.4",
+		"workers-ai-provider": "^3.1.1",
+		"zod": "^4.3.6"
 	},
 	"devDependencies": {
-		"@tanstack/devtools-vite": "^0.3.11",
-		"@testing-library/dom": "^10.4.0",
-		"@testing-library/react": "^16.2.0",
-		"@types/node": "^22.10.2",
-		"@types/react": "^19.2.0",
-		"@types/react-dom": "^19.2.0",
-		"@vitejs/plugin-react": "^5.0.4",
-		"jsdom": "^27.0.0",
-		"typescript": "^5.7.2",
-		"vite": "^7.1.7",
-		"vitest": "^3.0.5",
+		"@tanstack/devtools-vite": "^0.3.12",
+		"@testing-library/dom": "^10.4.1",
+		"@testing-library/react": "^16.3.2",
+		"@types/node": "^22.19.11",
+		"@types/react": "^19.2.14",
+		"@types/react-dom": "^19.2.3",
+		"@vitejs/plugin-react": "^5.1.4",
+		"jsdom": "^27.4.0",
+		"typescript": "^5.9.3",
+		"vite": "^7.3.1",
+		"vitest": "^3.2.4",
 		"wrangler": "^4.66.0"
 	}
 }
