--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
 		"cf-typegen": "wrangler types"
 	},
 	"dependencies": {
+		"@base-ui/react": "^1.2.0",
 		"@cloudflare/ai-chat": "^0.1.2",
-		"@cloudflare/kumo": "^1.5.1",
 		"@cloudflare/vite-plugin": "^1.25.1",
 		"@phosphor-icons/react": "^2.1.10",
 		"@tailwindcss/vite": "^4.1.18",
@@ -26,11 +26,14 @@
 		"@tanstack/router-plugin": "^1.161.1",
 		"agents": "^0.5.0",
 		"ai": "^6.0.90",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
 		"lucide-react": "^0.545.0",
-		"next-themes": "^0.4.6",
 		"react": "^19.2.4",
 		"react-dom": "^19.2.4",
+		"sonner": "^2.0.7",
 		"streamdown": "^2.2.0",
+		"tailwind-merge": "^3.4.1",
 		"tailwindcss": "^4.1.18",
 		"vite-tsconfig-paths": "^5.1.4",
 		"workers-ai-provider": "^3.1.1",
@@ -45,6 +48,8 @@
 		"@types/react-dom": "^19.2.3",
 		"@vitejs/plugin-react": "^5.1.4",
 		"jsdom": "^27.4.0",
+		"shadcn": "^3.8.5",
+		"tw-animate-css": "^1.4.0",
 		"typescript": "^5.9.3",
 		"vite": "^7.3.1",
 		"vitest": "^3.2.4",
