codemode for interacting with tools

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -17,6 +17,7 @@
 		"binding": "AI",
 		"remote": true
 	},
+	"worker_loaders": [{ "binding": "LOADER" }],
 	"kv_namespaces": [
 		{
 			"binding": "ETHCC_CACHE",
