--- a/package.json
+++ b/package.json
@@ -12,31 +12,32 @@
 	},
 	"dependencies": {
 		"@base-ui/react": "^1.2.0",
-		"@cloudflare/ai-chat": "^0.1.2",
-		"@cloudflare/vite-plugin": "^1.25.1",
+		"@cloudflare/ai-chat": "^0.1.3",
+		"@cloudflare/codemode": "^0.1.0",
+		"@cloudflare/vite-plugin": "^1.25.2",
 		"@phosphor-icons/react": "^2.1.10",
-		"@tailwindcss/vite": "^4.1.18",
+		"@tailwindcss/vite": "^4.2.0",
 		"@tanstack/react-devtools": "^0.7.11",
 		"@tanstack/react-query": "^5.90.21",
 		"@tanstack/react-query-devtools": "^5.91.3",
-		"@tanstack/react-router": "^1.161.1",
-		"@tanstack/react-router-devtools": "^1.161.1",
-		"@tanstack/react-router-ssr-query": "^1.161.1",
-		"@tanstack/react-start": "^1.161.1",
-		"@tanstack/router-plugin": "^1.161.1",
-		"agents": "^0.5.0",
-		"ai": "^6.0.90",
+		"@tanstack/react-router": "^1.161.3",
+		"@tanstack/react-router-devtools": "^1.161.3",
+		"@tanstack/react-router-ssr-query": "^1.161.3",
+		"@tanstack/react-start": "^1.161.3",
+		"@tanstack/router-plugin": "^1.161.3",
+		"agents": "^0.5.1",
+		"ai": "^6.0.95",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"lucide-react": "^0.545.0",
 		"react": "^19.2.4",
 		"react-dom": "^19.2.4",
 		"sonner": "^2.0.7",
-		"streamdown": "^2.2.0",
-		"tailwind-merge": "^3.4.1",
-		"tailwindcss": "^4.1.18",
+		"streamdown": "^2.3.0",
+		"tailwind-merge": "^3.5.0",
+		"tailwindcss": "^4.2.0",
 		"vite-tsconfig-paths": "^5.1.4",
-		"workers-ai-provider": "^3.1.1",
+		"workers-ai-provider": "^3.1.2",
 		"zod": "^4.3.6"
 	},
 	"devDependencies": {
@@ -53,6 +54,6 @@
 		"typescript": "^5.9.3",
 		"vite": "^7.3.1",
 		"vitest": "^3.2.4",
-		"wrangler": "^4.66.0"
+		"wrangler": "^4.67.0"
 	}
 }
